# auto_anotater

./: .coverage  .gitignore  =4.7.0  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MULTI_VIDEO_FEATURES_SUMMARY.md  README.md  create_multiagent_tmux.sh  main.py  pyproject.toml  pytest.ini  requirement.yaml  requirements.txt  run_tests.py  structure.yaml  test_actual_keys.py  test_auto_save.py  test_complete_annotation.py  test_dialog.py  test_final_multi_video.py  test_frame_display.py  test_full_processing.py  test_main_fixed.py  test_minimal_app.py  test_minimal_fixed.py  test_multi_video_features.py  test_multi_video_real.py  test_opencv_error.py  test_performance_monitor.py  test_project_dialog_only.py  test_shortcut_debug.py  test_shortcuts_fixed.py  test_signal_fix.py  test_video_processing.py  test_ws_keys.py
.github/workflows/: test.yml
app_venv/: pyvenv.cfg
claude/checklists/: v-model-checklist.md
config/: app_config.json  layer_interfaces.yaml  performance_targets.yaml
core/: annotation_manager.py  backup_manager.py  bbox_manager.py  config_manager.py  image_cache.py  tracking_system.py
demo_project/: project.json
demo_venv/: pyvenv.cfg
docs/: ERROR_PREVENTION_TESTS.md
requirements/layers/: application.md  cache_layer.md  data_bus.md  domain.md  infrastructure.md  monitoring.md  persistence.md  presentation.md
scripts/: performance_benchmark.py  run_integration_tests.py
src/: README.md  __init__.py  main.py  requirements.txt
src/application/: __init__.py
src/cache_layer/: __init__.py  cache_agent.py
src/core/: annotation_manager.py  bbox_manager.py  config_manager.py  (+4 more)
test_annotations/: 000003.txt  000004.txt  000005.txt
tests/: __init__.py  test_annotation_manager.py  test_backup_manager.py  test_multithreading_performance.py  test_ui_components.py
ui/: dialogs.py  frame_viewer.py  id_panel.py  main_window.py  navigation_panel.py
utils/: algorithm_utils.py  color_manager.py  coordinate_converter.py  file_manager.py  logger.py  memory_manager.py  performance_monitor.py
~/: .tmux.conf
(+177 files in other folders)
